--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "account-eth",
-  "version": "0.1.6",
-  "description": "JS library for Ethereum Address Generation",
+  "version": "0.1.7",
+  "description": "Fastest ⚡ JS library for Ethereum Address Generation",
   "sideEffects": false,
   "main": "./lib/cjs/index.js",
-  "module": "./lib/esm/index.js",
   "files": [
     "lib/"
   ],
@@ -15,6 +14,6 @@
   "author": "@ayushch80",
   "license": "MIT",
   "dependencies": {
-    "ethers": "^5.6.9"
+    "@noble/secp256k1": "^1.5.5"
   }
 }
